--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -20,7 +20,10 @@ h6 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 3.5em;
+  text-transform: uppercase;
+  margin-top: 1em;
+  font-weight: 300;
 }
 
 h2 {
