--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,7 +1,7 @@
 %nav.navigation
   .outer-container
     .logo
-      Gemlife
+      Selector
     %ul.navigation__left
       %li.navigation__item
         = link_to "All Events", events_path, class: "navigation__link"
