--- a/app/assets/stylesheets/patterns/_event.scss
+++ b/app/assets/stylesheets/patterns/_event.scss
@@ -4,7 +4,11 @@
   border: 1px $light-gray solid;
   padding: 0;
   margin-bottom: 2rem;
+  margin-left:auto;
+  margin-right:auto;
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .event__follows {
@@ -97,12 +101,10 @@
 }
 
 .event__image {
-  @include span-columns(12);
   background-color: $light-gray;
   position: relative;
 
   @include media($medium-screen) {
-    @include span-columns(3);
     max-height: 240px;
     overflow: hidden;
 
@@ -123,22 +125,21 @@
   display: block;
   margin: 0 auto;
   max-width: 320px;
-  height: auto;
-  width: 100%;
+  height: 240px;
+  width: auto;
 
   @include media($medium-screen) {
-    max-width: 100%;
+    width: auto;
+    height: 100%;
   }
 }
 
 .event__info {
-  @include span-columns(12);
   padding: 1rem;
 
   @include media($medium-screen) {
-    @include span-columns(9);
-    @include omega();
     padding-left: 0;
+    flex-grow: 0;
   }
 }
 
