Scaffold out footer markup

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,8 +4,14 @@
   Main Image Area
   %h1 Text Header
 %section.overlay
-  %h2.overlay__headline
-  %p.overlay__text
+  .overlay__content
+    %h2.overlay__headline
+      DJs and Dancing
+    %p.overlay__text
+      Lorem ipsum dolor sit amet
+  .overlay__cta
+    = link_to "Sign Up", class: "button"
+    = link_to "Login", class: "button"
 
 %section
   %h2 Tonight Events
