--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,3 +1,38 @@
 %footer.footer
   .outer-container
+    %nav.footer-nav
+      %h5 About
+      %ul.nav-list
+        %li
+          %a About
+        %li
+          %a Advertise
+        %li
+          %a FAQ
+    %nav.footer-nav
+      %h5 Music
+      %ul.nav-list
+        %li
+          %a Featured DJs
+        %li
+          %a Spotify
+        %li
+          %a Soundcloud
+    %nav.footer-nav
+      %h5 Online
+      %ul.nav-list
+        %li
+          %a Instagram
+        %li
+          %a Twitter
+        %li
+          %a Soundcloud
+    %nav.footer-nav
+      %h5 Fine Print
+      %ul.nav-list
+        %li
+          %a Terms &amp; Conditions
+        %li
+          %a Privacy Policy
+  .outer-container
     %h5 Copyright &copy; 2014 Gemlife
