--- a/app/assets/stylesheets/patterns/_field-group.scss
+++ b/app/assets/stylesheets/patterns/_field-group.scss
@@ -2,6 +2,28 @@
 
 }
 
+.field-group__list-item {
+  display: none;
+}
+
+.field-group__add-new {
+  display: none;
+}
+
+.field-group__list-item--visible, .field-group__add-new--visible {
+  color: #999;
+  cursor: pointer;
+  margin: 0;
+  padding: 0.5rem;
+  display: block;
+  border: 1px solid #efefef;
+  margin-top: -1px;
+
+  &:hover {
+    background-color: #f9f9f9;
+  }
+}
+
 .field-group__fields {
   padding: 0 1rem 1rem 1rem;
 }
